# XLM-Pay

./: AMM_BOT_PR_DESCRIPTION.md  CHAOS_ENGINEERING_PR.md  DID_IMPLEMENTATION_SUMMARY.md  PR_DESCRIPTION.md  PR_DESCRIPTION_NEW.md  PR_LINKS.md  PR_REGULATORY_REPORTING.md  PR_TEAM_DESCRIPTION.md  TEST_FIX_SUMMARY.md
Contracts/: CONTRACTS.md  Cargo.toml  test_output_4.txt  test_output_5.txt  test_output_7.txt  test_output_8.txt  test_output_9.txt
Contracts/contracts/academy/: Cargo.toml
Contracts/contracts/academy-rewards/: Cargo.toml
Contracts/contracts/cross-chain-router/: Cargo.toml
Contracts/contracts/did/: Cargo.toml  README.md
Contracts/contracts/did-registry/: Cargo.toml
Contracts/contracts/identity-hub/: Cargo.toml
Contracts/contracts/liquidity-mining/: Cargo.toml
Contracts/contracts/messaging/: Cargo.toml
Contracts/contracts/price-oracle/: Cargo.toml
Contracts/contracts/privacy_token/: Cargo.toml  test_output.txt  test_output_2.txt
Contracts/contracts/privacy_trading/: Cargo.toml
Contracts/contracts/reputation/: Cargo.toml
Contracts/contracts/social_rewards/: Cargo.toml
Contracts/contracts/stablecoin_reserve/: Cargo.toml
Contracts/contracts/staking-rewards/: Cargo.toml
Contracts/contracts/synthetic-assets/: Cargo.toml
Contracts/contracts/tcr/: Cargo.toml
Contracts/contracts/token/: Cargo.toml
Contracts/contracts/trading/: Cargo.toml
Contracts/contracts/treasury/: Cargo.toml
Contracts/contracts/verifiable-credentials/: Cargo.toml
Contracts/integration-tests/: Cargo.toml
Contracts/integration-tests/tests/: cross_contract.rs
Contracts/shared/: Cargo.toml  README.md
Contracts/shared/src/: cross_contract.rs  lib.rs  (+5 more)
(+308 files in other folders)
