[workspace]
members = [
    "contracts/trading",
    "contracts/social_rewards",
    "contracts/messaging",
    "contracts/academy",
    "contracts/academy-rewards",
    "contracts/synthetic-assets",

    "contracts/stablecoin_reserve",
    "contracts/reputation",
    "contracts/tcr",
    "integration-tests",
    "shared",
]
resolver = "2"