[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-sdk = { version = "=20.5.0", default-features = false }

[dev-dependencies]
proptest = "1.4.0"
rand = "0.8"
token = { path = "../contracts/token" }
soroban-sdk = { version = "=20.5.0", features = ["testutils"] }

[lib]
crate-type = ["cdylib", "rlib"]
