[package]
name = "academy-vesting"
version = "0.1.0"
edition = "2021"

[features]
default = []
testutils = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "=20.5.0", default-features = false }

[dev-dependencies]
soroban-sdk = { version = "=20.5.0", features = ["testutils"], default-features = false }

[profile.release]
opt-level = "z"
overflow-checks = true
lto = true
codegen-units = 1
strip = true
