[package]
name = "did-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "20.5.0", features = ["testutils"] }
stellar-xdr = { version = "20.1.0", features = ["next", "std"] }

[dev-dependencies]
soroban-sdk = { version = "20.5.0", features = ["testutils"] }
